force-app/main/default/objects/ProductCatalogue__c/ProductCatalogue__c.object-meta.xml
<CustomObject>
    <description>For PERSO app, products to be imported with Heroku Connect to get only Perso products (Heroku Connect can&apos;t filter in ProductReferential__c)</description>
    <label>Product (Catalogue)</label>
    <nameField>
        <label>Product name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products (Catalogue)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>