force-app/main/default/objects/ProductCatalogue__c/fields/alpha_catalog__c.field-meta.xml
<CustomField>
    <fullName>alpha_catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MTO products of Alfa project that will be not available on NY  have true for this field</description>
    <label>alpha_catalog</label>
    <type>Checkbox</type>
</CustomField>