force-app/main/default/objects/ProductCatalogue__c/fields/appcataloguevalue__c.field-meta.xml
<CustomField>
    <fullName>appcataloguevalue__c</fullName>
    <formula>Category__r.appcataloguevalue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>appcataloguevalue</label>
    <type>Text</type>
</CustomField>