force-app/main/default/objects/ProductCatalogue__c/fields/Assembly__c.field-meta.xml
<CustomField>
    <fullName>Assembly__c</fullName>
    <label>Pays de Montage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>