force-app/main/default/objects/ProductCatalogue__c/fields/AssociateColors__c.field-meta.xml
<CustomField>
    <fullName>AssociateColors__c</fullName>
    <label>Associate Colors</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>