force-app/main/default/objects/ProductCatalogue__c/fields/AssociatedModelSize__c.field-meta.xml
<CustomField>
    <fullName>AssociatedModelSize__c</fullName>
    <label>Associate Model Size</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>