force-app/main/default/objects/ProductCatalogue__c/fields/AssociateMaterials__c.field-meta.xml
<CustomField>
    <fullName>AssociateMaterials__c</fullName>
    <label>Associate Materials</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>