force-app/main/default/objects/ProductCatalogue__c/fields/AssociateSkinMaterials__c.field-meta.xml
<CustomField>
    <fullName>AssociateSkinMaterials__c</fullName>
    <label>Associate Skin Materials</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>