force-app/main/default/objects/ProductCatalogue__c/fields/Availability_is_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Availability_is_Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the list of stores in &quot;Available In Stores&quot; as a blacklist. If the flag is unchecked (=authorized), the product is displayed for all stores in the list. If the flag is checked (=forbidden), the product is displayed for all stores except those in the list.</description>
    <label>Availability is Blacklist</label>
    <type>Checkbox</type>
</CustomField>