force-app/main/default/objects/ProductCatalogue__c/fields/Available_In_Stores__c.field-meta.xml
<CustomField>
    <fullName>Available_In_Stores__c</fullName>
    <description>Used in NY to not display products for stores outside the list, allow selecting no store or any number of stores by their code (e.g. A06)</description>
    <label>Available In Stores</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>