force-app/main/default/objects/ProductCatalogue__c/fields/BccProductId__c.field-meta.xml
<CustomField>
    <fullName>BccProductId__c</fullName>
    <description>BCC product Id (ex: 015353) - not unique (ex: 000614 but different marketing colors)</description>
    <externalId>true</externalId>
    <label>Bcc Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>