force-app/main/default/objects/ProductCatalogue__c/fields/BookLanguage__c.field-meta.xml
<CustomField>
    <fullName>BookLanguage__c</fullName>
    <label>Book Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>