force-app/main/default/objects/ProductCatalogue__c/fields/BookModel__c.field-meta.xml
<CustomField>
    <fullName>BookModel__c</fullName>
    <label>Book Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>