force-app/main/default/objects/ProductCatalogue__c/fields/BuyCSC__c.field-meta.xml
<CustomField>
    <fullName>BuyCSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy CSC</label>
    <type>Checkbox</type>
</CustomField>