force-app/main/default/objects/ProductCatalogue__c/fields/BuyOnline__c.field-meta.xml
<CustomField>
    <fullName>BuyOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy Online</label>
    <type>Checkbox</type>
</CustomField>