force-app/main/default/objects/ProductCatalogue__c/fields/Capped_Hot_SKU__c.field-meta.xml
<CustomField>
    <fullName>Capped_Hot_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capped Hot SKU</label>
    <type>Checkbox</type>
</CustomField>