force-app/main/default/objects/ProductCatalogue__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[MakeItYours] a product is finally in more than 1 category (temporary solution: field created)</description>
    <label>Category 2</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>