force-app/main/default/objects/ProductCatalogue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Make It Yours (Perso) app, a product is in one category only (don&apos;t use the BCC category where &quot;Mon monogram&quot; has a BCC ID for Men and one BCC Id for woman</description>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>