force-app/main/default/objects/ProductCatalogue__c/fields/CategoryActive__c.field-meta.xml
<CustomField>
    <fullName>CategoryActive__c</fullName>
    <description>Check if the category is active (used for Make It Yours)</description>
    <formula>Category__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Active</label>
    <type>Checkbox</type>
</CustomField>