force-app/main/default/objects/ProductCatalogue__c/fields/CollectionId__c.field-meta.xml
<CustomField>
    <fullName>CollectionId__c</fullName>
    <description>BCC collection id</description>
    <label>Collection Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>