force-app/main/default/objects/ProductCatalogue__c/fields/CollectionName__c.field-meta.xml
<CustomField>
    <fullName>CollectionName__c</fullName>
    <description>BCC collection name</description>
    <label>Collection Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>