force-app/main/default/objects/ProductCatalogue__c/fields/color_image__c.field-meta.xml
<CustomField>
    <fullName>color_image__c</fullName>
    <label>color image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>