force-app/main/default/objects/ProductCatalogue__c/fields/CommercialName__c.field-meta.xml
<CustomField>
    <fullName>CommercialName__c</fullName>
    <label>Commercial Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>