force-app/main/default/objects/ProductCatalogue__c/fields/Dangeroussubstances__c.field-meta.xml
<CustomField>
    <fullName>Dangeroussubstances__c</fullName>
    <label>Substances dangereuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>