force-app/main/default/objects/ProductCatalogue__c/fields/defaultSku__c.field-meta.xml
<CustomField>
    <fullName>defaultSku__c</fullName>
    <label>default Sku</label>
    <length>10</length>
    <type>Text</type>
</CustomField>