force-app/main/default/objects/ProductCatalogue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>BCC description</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>