force-app/main/default/objects/ProductCatalogue__c/fields/DetailedDescription__c.field-meta.xml
<CustomField>
    <fullName>DetailedDescription__c</fullName>
    <label>Detailed Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>