force-app/main/default/objects/ProductCatalogue__c/fields/Direct_Personalization__c.field-meta.xml
<CustomField>
    <fullName>Direct_Personalization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used by Make It Yours web app. If checked, when clicking on the product in the grid, open the &quot;Personalisable SKU&quot; page directly</description>
    <label>Direct Personalization</label>
    <type>Checkbox</type>
</CustomField>