force-app/main/default/objects/ProductCatalogue__c/fields/Discover_the_family_product__c.field-meta.xml
<CustomField>
    <fullName>Discover_the_family_product__c</fullName>
    <description>show the product family of an article</description>
    <label>Discover the family product</label>
    <type>TextArea</type>
</CustomField>