force-app/main/default/objects/ProductCatalogue__c/fields/DisplayProduct__c.field-meta.xml
<CustomField>
    <fullName>DisplayProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Display product</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Products (Catalogue)</relationshipLabel>
    <relationshipName>Products_Catalogue</relationshipName>
    <type>Lookup</type>
</CustomField>