force-app/main/default/objects/ProductCatalogue__c/fields/Dyeingprinting__c.field-meta.xml
<CustomField>
    <fullName>Dyeingprinting__c</fullName>
    <label>Pays de Teinture ou Impression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>