force-app/main/default/objects/ProductCatalogue__c/fields/EligibleSpecialOrder__c.field-meta.xml
<CustomField>
    <fullName>EligibleSpecialOrder__c</fullName>
    <description>Product catalogue eligible for Special Order app (Leather goods with Stock Request = false or Belts). Used for Now Yours app to display &apos;Creation&apos; button on the product page</description>
    <formula>IF (
  OR (
    Category__r.Name = &apos;Leather Goods&apos;,
    Category__r.Name = &apos;Horizon&apos;,
    Category__r.Name = &apos;Golf Bag&apos;,
    Category__r.Name = &apos;Horizon Soft&apos;,
    Category2__r.Name = &apos;EXCLUD NY Creation Sku hidden cat&apos;,
    ReportingCategory__r.Name = &apos;Mon Damier Graphite&apos;,
    ReportingCategory__r.Name = &apos;Mon Monogram&apos;
  ),
  false,

  AND (
    OR (
      UPPER(ProductGroup__c) = UPPER(&apos;Leather goods&apos;),
      UPPER(ProductReferential__r.SPO_Category__c) = &apos;BELTS&apos;
    )
  )
)</formula>
    <label>Eligible Special Order</label>
    <type>Checkbox</type>
</CustomField>