force-app/main/default/objects/ProductCatalogue__c/fields/en_E1_size__c.field-meta.xml
<CustomField>
    <fullName>en_E1_size__c</fullName>
    <label>en E1 size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>