force-app/main/default/objects/ProductCatalogue__c/fields/engraving__c.field-meta.xml
<CustomField>
    <fullName>engraving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>engraving</label>
    <type>Checkbox</type>
</CustomField>