force-app/main/default/objects/ProductCatalogue__c/fields/engravingAssetId__c.field-meta.xml
<CustomField>
    <fullName>engravingAssetId__c</fullName>
    <label>engravingAssetId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>