force-app/main/default/objects/ProductCatalogue__c/fields/engravingEnabled__c.field-meta.xml
<CustomField>
    <fullName>engravingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>engravingEnabled</label>
    <type>Checkbox</type>
</CustomField>