force-app/main/default/objects/ProductCatalogue__c/fields/engravingType__c.field-meta.xml
<CustomField>
    <fullName>engravingType__c</fullName>
    <label>engravingType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>