force-app/main/default/objects/ProductCatalogue__c/fields/Erase_MTO_Recipe_Id__c.field-meta.xml
<CustomField>
    <fullName>Erase_MTO_Recipe_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erase MTO Recipe Id</label>
    <type>Checkbox</type>
</CustomField>