force-app/main/default/objects/ProductCatalogue__c/fields/Exotic__c.field-meta.xml
<CustomField>
    <fullName>Exotic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product with exotic material Same as ProductReferential__r.Cites__c (helpful to calculate the lead time)</description>
    <label>Exotic</label>
    <type>Checkbox</type>
</CustomField>