force-app/main/default/objects/ProductCatalogue__c/fields/Exotic_Leather__c.field-meta.xml
<CustomField>
    <fullName>Exotic_Leather__c</fullName>
    <label>Exotic Leather</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exotic_Leather</valueSetName>
    </valueSet>
</CustomField>