force-app/main/default/objects/ProductCatalogue__c/fields/ExoticSkuNoDisplayChoice__c.field-meta.xml
<CustomField>
    <fullName>ExoticSkuNoDisplayChoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked: will not display the choice of this sku (of Exotic non fluid product) in the list of &quot;Crocodilien with choice of species&quot;.</description>
    <label>Exotic Sku No Display Choice</label>
    <type>Checkbox</type>
</CustomField>