force-app/main/default/objects/ProductCatalogue__c/fields/Finition__c.field-meta.xml
<CustomField>
    <fullName>Finition__c</fullName>
    <label>Pays de Finition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>