force-app/main/default/objects/ProductCatalogue__c/fields/FluidCombinedSKUs__c.field-meta.xml
<CustomField>
    <fullName>FluidCombinedSKUs__c</fullName>
    <description>[MakeItYours][Fluid] A SKU can be a composition of several SKUs (from Fluid). For example: a product can be composed of a leather product and a buckle product (for Belt)</description>
    <label>Combined SKUs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>