force-app/main/default/objects/ProductCatalogue__c/fields/FluidImageRecipeId__c.field-meta.xml
<CustomField>
    <fullName>FluidImageRecipeId__c</fullName>
    <description>Stores the recipe ID for Fluid products used to display product images (different from the default recipe ID used when opening the configurator)</description>
    <label>FluidImageRecipeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>