force-app/main/default/objects/ProductCatalogue__c/fields/FluidProductId__c.field-meta.xml
<CustomField>
    <fullName>FluidProductId__c</fullName>
    <description>Product id for Fluid app</description>
    <label>Fluid Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>