force-app/main/default/objects/ProductCatalogue__c/fields/FluidRecipeId__c.field-meta.xml
<CustomField>
    <fullName>FluidRecipeId__c</fullName>
    <description>Recipe id for Fluid app</description>
    <label>Fluid Recipe Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>