force-app/main/default/objects/ProductCatalogue__c/fields/FluidViewImage__c.field-meta.xml
<CustomField>
    <fullName>FluidViewImage__c</fullName>
    <description>If empty, use the FluidViewImage on Category__c</description>
    <label>FluidViewImage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>