force-app/main/default/objects/ProductCatalogue__c/fields/From_price__c.field-meta.xml
<CustomField>
    <fullName>From_price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to display &quot;from&quot; before the price in Make It Yours (for personalized products with a price that can vary)</description>
    <inlineHelpText>Check this to display &quot;from&quot; before the product price in Make It Yours</inlineHelpText>
    <label>From price</label>
    <type>Checkbox</type>
</CustomField>