force-app/main/default/objects/ProductCatalogue__c/fields/FunctionId__c.field-meta.xml
<CustomField>
    <fullName>FunctionId__c</fullName>
    <label>Function Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>