force-app/main/default/objects/ProductCatalogue__c/fields/FunctionName__c.field-meta.xml
<CustomField>
    <fullName>FunctionName__c</fullName>
    <label>Function name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>