force-app/main/default/objects/ProductCatalogue__c/fields/GenderMen__c.field-meta.xml
<CustomField>
    <fullName>GenderMen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product for Man</description>
    <label>Gender Men</label>
    <type>Checkbox</type>
</CustomField>