force-app/main/default/objects/ProductCatalogue__c/fields/Get_Inspired__c.field-meta.xml
<CustomField>
    <fullName>Get_Inspired__c</fullName>
    <label>Get Inspired</label>
    <type>TextArea</type>
</CustomField>