force-app/main/default/objects/ProductCatalogue__c/fields/GlassShapeId__c.field-meta.xml
<CustomField>
    <fullName>GlassShapeId__c</fullName>
    <label>Glass Shape Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>