force-app/main/default/objects/ProductCatalogue__c/fields/GlassShapeName__c.field-meta.xml
<CustomField>
    <fullName>GlassShapeName__c</fullName>
    <label>Glass Shape name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>