force-app/main/default/objects/ProductCatalogue__c/fields/HeelHeight__c.field-meta.xml
<CustomField>
    <fullName>HeelHeight__c</fullName>
    <label>Heel Height</label>
    <length>100</length>
    <type>Text</type>
</CustomField>