force-app/main/default/objects/ProductCatalogue__c/fields/HeightCm__c.field-meta.xml
<CustomField>
    <fullName>HeightCm__c</fullName>
    <label>Height (in cm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>