force-app/main/default/objects/ProductCatalogue__c/fields/HeightInch__c.field-meta.xml
<CustomField>
    <fullName>HeightInch__c</fullName>
    <label>Height (in inch)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>