force-app/main/default/objects/ProductCatalogue__c/fields/Image1Name__c.field-meta.xml
<CustomField>
    <fullName>Image1Name__c</fullName>
    <label>Image 1 name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>