force-app/main/default/objects/ProductCatalogue__c/fields/Image2Name__c.field-meta.xml
<CustomField>
    <fullName>Image2Name__c</fullName>
    <label>Image 2 name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>