force-app/main/default/objects/ProductCatalogue__c/fields/Image2Url__c.field-meta.xml
<CustomField>
    <fullName>Image2Url__c</fullName>
    <formula>IF (NOT(ISBLANK(FluidImageRecipeId__c)),
  $Setup.ProductSettings__c.FluidPictureUrl__c + FluidImageRecipeId__c + &apos;/image/Back.jpg&apos;,
  IF (NOT(ISBLANK(Image2Name__c)),
    $Setup.ProductSettings__c.BccLargePictureUrl__c + Image2Name__c, 
    IF (NOT(ISBLANK(FluidRecipeId__c)),
      $Setup.ProductSettings__c.FluidPictureUrl__c + FluidRecipeId__c + &apos;/image/Back.jpg&apos;,
      &apos;&apos;
    )
  )
)

/*IF (
  NOT(ISBLANK(FluidRecipeId__c)),
  $Setup.ProductSettings__c.FluidPictureUrl__c + FluidRecipeId__c + &apos;/image/Back.jpg&apos;,
  IF (
    NOT(ISBLANK(Image2Name__c)),
    $Setup.ProductSettings__c.BccLargePictureUrl__c + Image2Name__c, 
    &apos;&apos;
  )
)*/</formula>
    <label>Image 2 Url</label>
    <type>Text</type>
</CustomField>