force-app/main/default/objects/ProductCatalogue__c/fields/Image3Name__c.field-meta.xml
<CustomField>
    <fullName>Image3Name__c</fullName>
    <label>Image 3 name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>