force-app/main/default/objects/ProductCatalogue__c/fields/isDefaultSku__c.field-meta.xml
<CustomField>
    <fullName>isDefaultSku__c</fullName>
    <formula>SKU__c = defaultSku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDefaultSku</label>
    <type>Checkbox</type>
</CustomField>