force-app/main/default/objects/ProductCatalogue__c/fields/IsPersoProduct__c.field-meta.xml
<CustomField>
    <fullName>IsPersoProduct__c</fullName>
    <formula>BEGINS(SKU__c, &apos;P&apos;) ||  NOT(ISBLANK( Category__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Perso</label>
    <type>Checkbox</type>
</CustomField>