force-app/main/default/objects/ProductCatalogue__c/fields/isRecyclable__c.field-meta.xml
<CustomField>
    <fullName>isRecyclable__c</fullName>
    <formula>IF(
NOT(ISBLANK(Recyclabilityfp__c)),
CASE(
Recyclabilityfp__c,
0, &quot;N/A&quot;,
1, &quot;Produit majoritairement recyclable&quot;,
2, &quot;Produit entièrement recyclable&quot;,
3, &quot;Produit recyclable en un produit de même nature&quot;,
&quot;N/A&quot;
),
&quot;N/A&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRecyclable</label>
    <type>Text</type>
</CustomField>