force-app/main/default/objects/ProductCatalogue__c/fields/LeadTimeApproval__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeApproval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Approval time to calculate the delivery date lead time (in calendar days)</description>
    <label>Lead Time Approval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>