force-app/main/default/objects/ProductCatalogue__c/fields/LeadTimeDistribution__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeDistribution__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lead Time Distribution to calculate the total lead time (in calendar days)</description>
    <label>Lead Time Distribution</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>