force-app/main/default/objects/ProductCatalogue__c/fields/LeadTimeManufacturing__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeManufacturing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lead Time Manufacturing to calculate the total lead time (in calendar days)</description>
    <label>Lead Time Manufacturing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>