force-app/main/default/objects/ProductCatalogue__c/fields/LeadTimeTotalDays__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeTotalDays__c</fullName>
    <description>Total Lead Time In Days = Approval time + Lead Time Manufacturing + Lead Time Distribution</description>
    <formula>LeadTimeApproval__c + LeadTimeManufacturing__c + LeadTimeDistribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lead Time In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>