force-app/main/default/objects/ProductCatalogue__c/fields/LeadTimeTotalWeeks__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeTotalWeeks__c</fullName>
    <description>Lead time in weeks</description>
    <formula>CEILING(LeadTimeTotalDays__c / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time Total Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>