force-app/main/default/objects/ProductCatalogue__c/fields/LengthCm__c.field-meta.xml
<CustomField>
    <fullName>LengthCm__c</fullName>
    <label>Length (in cm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>