force-app/main/default/objects/ProductCatalogue__c/fields/LengthInch__c.field-meta.xml
<CustomField>
    <fullName>LengthInch__c</fullName>
    <label>Length (in inch)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>