force-app/main/default/objects/ProductCatalogue__c/fields/longSkuId__c.field-meta.xml
<CustomField>
    <fullName>longSkuId__c</fullName>
    <externalId>true</externalId>
    <label>longSkuId</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>