force-app/main/default/objects/ProductCatalogue__c/fields/MacroColorId__c.field-meta.xml
<CustomField>
    <fullName>MacroColorId__c</fullName>
    <label>Macro color id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>