force-app/main/default/objects/ProductCatalogue__c/fields/MacroColorName__c.field-meta.xml
<CustomField>
    <fullName>MacroColorName__c</fullName>
    <label>Macro color name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>