force-app/main/default/objects/ProductCatalogue__c/fields/macroFunction__c.field-meta.xml
<CustomField>
    <fullName>macroFunction__c</fullName>
    <label>macroFunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>