force-app/main/default/objects/ProductCatalogue__c/fields/MadeIn__c.field-meta.xml
<CustomField>
    <fullName>MadeIn__c</fullName>
    <label>Made In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>