force-app/main/default/objects/ProductCatalogue__c/fields/Mailing_List_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_List_Email_Address__c</fullName>
    <label>Mailing List Email Address</label>
    <type>Email</type>
</CustomField>