force-app/main/default/objects/ProductCatalogue__c/fields/Manufacturingfp__c.field-meta.xml
<CustomField>
    <fullName>Manufacturingfp__c</fullName>
    <label>Pays de Confection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>