force-app/main/default/objects/ProductCatalogue__c/fields/MarketingColorId__c.field-meta.xml
<CustomField>
    <fullName>MarketingColorId__c</fullName>
    <label>Marketing Color Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>