force-app/main/default/objects/ProductCatalogue__c/fields/MarketingColorName__c.field-meta.xml
<CustomField>
    <fullName>MarketingColorName__c</fullName>
    <label>Marketing Color name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>