force-app/main/default/objects/ProductCatalogue__c/fields/material_image__c.field-meta.xml
<CustomField>
    <fullName>material_image__c</fullName>
    <label>material image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>