force-app/main/default/objects/ProductCatalogue__c/fields/MaterialGroupId__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroupId__c</fullName>
    <label>Material group id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>