force-app/main/default/objects/ProductCatalogue__c/fields/MaterialGroupName__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroupName__c</fullName>
    <label>Material group name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>