force-app/main/default/objects/ProductCatalogue__c/fields/MaterialId__c.field-meta.xml
<CustomField>
    <fullName>MaterialId__c</fullName>
    <label>Material id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>