force-app/main/default/objects/ProductCatalogue__c/fields/MaterialName__c.field-meta.xml
<CustomField>
    <fullName>MaterialName__c</fullName>
    <label>Material name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>