force-app/main/default/objects/ProductCatalogue__c/fields/MIY_Order__c.field-meta.xml
<CustomField>
    <fullName>MIY_Order__c</fullName>
    <description>[Now Yours app] Display products in a category in an specific order</description>
    <label>NY Order index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>