force-app/main/default/objects/ProductCatalogue__c/fields/MiyCom__c.field-meta.xml
<CustomField>
    <fullName>MiyCom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can you order the product on lv.com</description>
    <label>MiyCom</label>
    <type>Checkbox</type>
</CustomField>