force-app/main/default/objects/ProductCatalogue__c/fields/Model_material__c.field-meta.xml
<CustomField>
    <fullName>Model_material__c</fullName>
    <label>Référence matière</label>
    <length>255</length>
    <type>Text</type>
</CustomField>