force-app/main/default/objects/ProductCatalogue__c/fields/MTO__c.field-meta.xml
<CustomField>
    <fullName>MTO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can the product be selected for the MTO process</description>
    <label>MTO</label>
    <type>Checkbox</type>
</CustomField>