force-app/main/default/objects/ProductCatalogue__c/fields/NewArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>NewArrivalDate__c</fullName>
    <label>New Arrival Date</label>
    <type>Date</type>
</CustomField>