force-app/main/default/objects/ProductCatalogue__c/fields/Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Obsolete__c</fullName>
    <label>Obsolete</label>
    <type>Date</type>
</CustomField>