force-app/main/default/objects/ProductCatalogue__c/fields/Olfactive__c.field-meta.xml
<CustomField>
    <fullName>Olfactive__c</fullName>
    <label>Olfactive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>