force-app/main/default/objects/ProductCatalogue__c/fields/OrderableEMEA__c.field-meta.xml
<CustomField>
    <fullName>OrderableEMEA__c</fullName>
    <formula>IF(not(isblank(ProductReferential__c)),IF(isblank(TEXT(ProductReferential__r.OrderableEMEA__c)), &apos;Orderable&apos;, Text(ProductReferential__r.OrderableEMEA__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderableEMEA</label>
    <type>Text</type>
</CustomField>