force-app/main/default/objects/ProductCatalogue__c/fields/OrderableJapan__c.field-meta.xml
<CustomField>
    <fullName>OrderableJapan__c</fullName>
    <formula>IF(not(isblank(ProductReferential__c)),IF(isblank(TEXT(ProductReferential__r.OrderableJapan__c)), &apos;Orderable&apos;, Text(ProductReferential__r.OrderableJapan__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderableJapan</label>
    <type>Text</type>
</CustomField>